# nobetterc

./: .gitignore  docker-env.sh  dub.sdl  ldc2.conf  test_all.d
.github/workflows/: test-idf.yml
source/: object.d
source/app/: main.d
source/druntime/: assertion.d  comparison.d  ctfe.d  destroy.d  hashing.d  heap.d  libc_funcs.d
source/druntime/classes/: casting.d  comparison.d  invariant_.d  object_class.d
source/druntime/exceptions/: base_classes.d  functions.d  package.d
source/druntime/slices/: casting.d  comparison.d  copying.d  equality.d
source/druntime/typeinfo/: base.d  classes_interfaces.d  common.d  enums_tuples.d  functions.d  pointers.d  primitives.d  slices.d  static_arrays.d  structs.d  structs_unions_vectors.d  type_attributes.d
source/ministd/: algorithm.d  ascii.d  conv.d  heap.d  math.d  meta.d  package.d  stdio.d  string.d  traits.d  typecons.d  volatile.d
source/ministd/algorithm/: move.d  package.d
source/ministd/conv/: package.d  to.d
source/ministd/conv/internal/: to_string.d
source/ministd/format/: package.d  parse.d  spec.d  write.d
source/ministd/range/: primitives.d
source/ministd/typecons/: appender.d  dynarray.d  heap.d  heap_array.d  package.d
source/nobetterc_test/: run_tests_main.d
source/test/: run_tests.d
test/: README.md  build_test.d
test/idf/: CMakeLists.txt
